# QP-based-motion-filter

./: CMakeLists.txt  LICENSE  README.md
2025-2/120086_neural networks and deep learning/: HW1_housing price prediction.ipynb
include/: QP_based_motion_filter.hpp
src/: QP_based_motion_filter.cpp  main.cpp
